@@ -1,7 +1,12 @@
 2007-01-11  Nick Clifton  <nickc@redhat.com>
 
-	* gas/lns/lns.exp (run_list_test): Run the alternative version of
-	the lns-common-1 test for the MCore target.
+	* gas/mcore/allinsn.s: Remove use of '#' before numbers - it is a
+	line comment character.
+	* gas/mcore/allinsn.d: Adjust expected disassembly to match real
+	output.
+
+	* gas/lns/lns.exp: Run the alternative version of the lns-common-1
+	test for the MCore target.
 
 2007-01-08  Kai Tietz	<kai.tietz@onevision.com>
 
